<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 ctOS-Network. All rights reserved.
  ~ Created by KingCTer on 13:01, 22/10/2021
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_library">

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.ctosnetwork.qtreader.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_bookcase"
        android:name="com.ctosnetwork.qtreader.ui.bookcase.BookcaseFragment"
        android:label="@string/title_bookcase"
        tools:layout="@layout/fragment_bookcase" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.ctosnetwork.qtreader.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.ctosnetwork.qtreader.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>